solve main overlapping in front of page-header
-add z-index to page-header
-add border-bottom to page-header

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -118,6 +118,8 @@ header {
     left: 0;
     right: 0;
     top: 0;
+    z-index: 1;
+    border-bottom: 3px solid $light-turquoise;
 }
 
 .page-header__logo-item {
